Small changes in makefiles and readme.
git-svn-id: http://ceres/FrontSTR/svn/meshtools/trunk@136 f889add8-8e12-0410-85aa-139c134ed86c

--- a/README
+++ b/README
@@ -1,13 +1,13 @@
 meshtools: Mesh tools for FrontSTR
 
 <DESCRIPTION>
-'meshtools' includes three programs:
+'meshtools' include three programs:
 1. sd342to341: subdevide 342 element into 8 341 elements, trying to
                keep aspect ratio as small as possible.
-2. rf341to342: refine 341 mesh into 342 mesh by introducing middle
-               nodes, NOT bothering about boundary conditions on the
-	       new middle nodes.
-3. meshcount: count the number of nodes and elements
+2. rf341to342: refine 341 mesh into 342 mesh by adding middle nodes,
+               NOT concidering boundary conditions on the new middle
+	       nodes.
+3. meshcount: count the number of nodes and elements.
 
 <COMPILATION>
 Edit Makefile as needed and run 'make'.
@@ -25,13 +25,13 @@ If mesh_file is ommited, input is read from STDIN.
 
 <EXAMPLE>
 If you have a FrontSTR mesh with 342 elements, for example A342.msh,
-you can obtain a fine mesh, with 8 times as many elements as the
+you can obtain a refined mesh, with 8 times as many elements as the
 original, with the following commands:
 
 $ sd342to341 A342.msh A342-341.msh
 $ rf341to342 A342-341.msh A342-refined.msh
 
-You can also do the same thing at onece:
+Another way to do the same thing at onece:
 
 $ sd342to341 A342.msh | rf341to342 > A342-refined.msh
 
